@@ -17,7 +17,7 @@ Getting SunUO
 
 You can download SunUO on the home page:
 
- http://max.kellermann.name/projects/sunuo/
+ http://www.sunuo.org/
 
 
 Installation and Configuration
@@ -26,7 +26,7 @@ Installation and Configuration
 Most of the documentation has moved to another file written in
 DocBook. There is an online version:
 
- http://max.kellermann.name/projects/sunuo/doc/sunuo.html
+ http://www.sunuo.org/doc/sunuo.html
 
 
 Legal
