@@ -18,7 +18,7 @@
     </title>
     <para>
       <ulink
-        url="http://max.kellermann.name/projects/sunuo/">SunUO</ulink>
+        url="http://www.sunuo.org/">SunUO</ulink>
         is a free <ulink url="http://www.uo.com/">Ultima
         Online</ulink> server for Linux/Mono and Windows.NET, based on
         <ulink url="http://www.runuo.com/">RunUO</ulink>.
