@@ -34,7 +34,7 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyDescription("a free Ultima Online server")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Max Kellermann <max@duempel.org> http://max.kellermann.name/")]
-[assembly: AssemblyProduct("SunUO http://max.kellermann.name/projects/sunuo/")]
+[assembly: AssemblyProduct("SunUO http://www.sunuo.org/")]
 [assembly: AssemblyCopyright("(c) 2005 Max Kellermann <max@duempel.org>")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]		
