@@ -4,6 +4,7 @@ sunuo (0.1.9) unstable; urgency=low
   * fixed typo in Config.cs which disabled <ignore-type/>
   * write etc/sunuo.xml only if it did not exist
   * fixed NullReferenceException in overlay error handler
+  * home page changed to http://www.sunuo.org/
 
  --
 
